# snappit

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  color.css  components.json  constants.json  eslint.config.ts  fix_paths.sh  history.md  index.html  package.json  pnpm-lock.yaml  release.md  resolve-paths.sh  setup-vcpkg.ps1  snap_overlay.html  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  updater.md  vite.config.ts
.zed/: settings.json  tasks.json
shared/: animations.css  constants.ts  global.css  (+1 more)
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/lib-mac/: libarchive.13.dylib  libb2.1.dylib  libgif.dylib  libjpeg.8.dylib  libleptonica.6.dylib  libleptonica.dylib  liblz4.1.dylib  liblzma.5.dylib  libopenjp2.7.dylib  libpng16.16.dylib  libsharpyuv.0.dylib  libtesseract.5.dylib  libtiff.6.dylib  libwebp.7.dylib  libwebpmux.3.dylib  libzstd.1.dylib
src-tauri/src/: img_protocol.rs  lib.rs  macos_color_capture.rs  main.rs  platform.rs  region_capture.rs  snap_overlay.rs  snappit_consts.rs  snappit_errors.rs  snappit_license.rs  snappit_notifications.rs  snappit_notifications_stub.rs  snappit_overlay.rs  snappit_overlay_stub.rs  snappit_permissions.rs  snappit_res.rs  snappit_screen_capture.rs  snappit_settings.rs  snappit_shortcut_manager.rs  snappit_sounds.rs  snappit_store.rs  snappit_tray.rs  text_processing.rs  text_snap_color_dropper.rs  text_snap_consts.rs  text_snap_errors.rs  text_snap_overlay.rs  text_snap_permissions.rs  text_snap_res.rs  text_snap_screen_capture.rs  text_snap_settings.rs  text_snap_shortcuts.rs  text_snap_store.rs  text_snap_tray.rs  tray.rs
src-tauri/src/snappit_capturer/: macos_capturer.rs  mod.rs  multiplatform_capturer.rs  snappit_capturer.rs
src-tauri/src/snappit_notifications/: macos_notifications.rs  mod.rs  multiplatform_notifications.rs  snappit_notifications.rs
src-tauri/src/snappit_ocr/: commands.rs  mod.rs  recognition_language.rs  snappit_ocr.rs  tesseract_ocr.rs  vision_ocr.rs
src-tauri/src/snappit_overlay/: macos_overlay.rs  mod.rs  multiplatform_overlay.rs  snappit_overlay.rs
src-tauri/src/snappit_qr/: mod.rs  rqrr_qr.rs  rxing_qr.rs  snappit_qr.rs  vision_qr.rs
src-tauri/src/text_snap_ocr/: mod.rs  paddle_ocr.rs  tesseract_ocr.rs  text_snap_ocr.rs
src-tauri/src/text_snap_ocr/paddle_ocr_models/: dict.txt
src-tauri/src/text_snap_ocr/tesseract_models/: libtesseract.5.dylib
src-tauri/src/text_snap_qr/: mod.rs  text_snap_qr.rs
src-tauri/src/traits/: into_dynamic.rs  mod.rs
(+165 files in other folders)
