[package]
name = "snappit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snappit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.27"
tauri-plugin-log = "2.6.0"
objc2-app-kit = "0.3.1"
xcap = "0.7.0"
fs_extra = "1.3.0"
colored = "3.0.0"
thiserror = "2.0.16"
base64 = "0.22"
tauri-plugin-clipboard-manager = "2"
once_cell = "1.21.3"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
strum_macros = "0.27.2"
strum = "0.27.2"
image = "0.25"
leptess = "0.14.0"
sys-locale = "0.3.2"
rqrr = "0.10.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
objc2 = "0.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
